--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,14 @@
 /* styles.css */
+
+header {
+    background-color: white;
+    height: 50px;
+}
+main {
+    background-color: rgb(218, 218, 218);
+    height: 60vh;
+}
+footer {
+    background-color: white;
+    height: 20vh;
+}
