--- a/styles.css
+++ b/styles.css
@@ -2,13 +2,19 @@
 
 header {
     background-color: white;
-    height: 50px;
 }
 main {
     background-color: rgb(218, 218, 218);
-    height: 60vh;
+    height: 500px;
 }
 footer {
-    background-color: white;
-    height: 20vh;
+    background-color: rgb(255, 255, 255);
+    height: 50px;
+}
+
+header, main, footer {
+    border: 3px solid black;
+    margin: 5px;
+    font-size: 2em;
+    padding: 5px;
 }
