--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,19 @@
 /* styles.css */
 
+body {
+    padding: 1%;
+}
+
 header {
     background-color: white;
 }
+
 main {
     background-color: rgb(218, 218, 218);
-    height: 500px;
 }
+
 footer {
     background-color: rgb(255, 255, 255);
-    height: 50px;
 }
 
 header, main, footer {
